// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RepoList.vue filters by language: FilterByLanguage 1`] = `
<b-container-stub tag="div" fluid="true" class="pt-4 pb-2">
  <b-row-stub tag="div">
    <b-col-stub tag="div">
      <b-container-stub tag="div">
        <b-row-stub tag="div">
          <b-col-stub tag="div">
            <h3 class="mb-4">
              All Repos

            </h3>
            <b-row-stub tag="div" class="mb-3">
              <b-col-stub md="6" tag="div">
                <b-form-input-stub value="javascri" autocomplete="off" placeholder="Filter by title or language" type="text"></b-form-input-stub>
              </b-col-stub>
            </b-row-stub>
            <b-row-stub tag="div">
              <b-col-stub lg="8" tag="div" class="mb-4">
                <repo-card-stub item="[object Object]"></repo-card-stub>
              </b-col-stub>
            </b-row-stub>
          </b-col-stub>
        </b-row-stub>
      </b-container-stub>
    </b-col-stub>
  </b-row-stub>
</b-container-stub>
`;

exports[`RepoList.vue matches snapshot with default props: defaultProps 1`] = `
<b-container-stub tag="div" fluid="true" class="pt-4 pb-2">
  <b-row-stub tag="div">
    <b-col-stub tag="div">
      <b-container-stub tag="div">
        <b-row-stub tag="div">
          <b-col-stub tag="div">
            <h3 class="mb-4">
              All Repos

            </h3>
            <!---->
            <b-row-stub tag="div"></b-row-stub>
          </b-col-stub>
        </b-row-stub>
      </b-container-stub>
    </b-col-stub>
  </b-row-stub>
</b-container-stub>
`;

exports[`RepoList.vue matches snapshot with set props (no filter, no title count, default title): noFilterNoTitleCountDefaultTitle 1`] = `
<b-container-stub tag="div" fluid="true" class="pt-4 pb-2">
  <b-row-stub tag="div">
    <b-col-stub tag="div">
      <b-container-stub tag="div">
        <b-row-stub tag="div">
          <b-col-stub tag="div">
            <h3 class="mb-4">
              All Repos

            </h3>
            <!---->
            <b-row-stub tag="div">
              <b-col-stub lg="8" tag="div" class="mb-4">
                <repo-card-stub item="[object Object]"></repo-card-stub>
              </b-col-stub>
              <b-col-stub lg="8" tag="div" class="mb-4">
                <repo-card-stub item="[object Object]"></repo-card-stub>
              </b-col-stub>
            </b-row-stub>
          </b-col-stub>
        </b-row-stub>
      </b-container-stub>
    </b-col-stub>
  </b-row-stub>
</b-container-stub>
`;

exports[`RepoList.vue matches snapshot with set props (with filter, with title count, 4 columns, set title): withFilterWithTitleCountFourColumnsWithSetTitle 1`] = `
<b-container-stub tag="div" fluid="true" class="pt-4 pb-2">
  <b-row-stub tag="div">
    <b-col-stub tag="div">
      <b-container-stub tag="div">
        <b-row-stub tag="div">
          <b-col-stub tag="div">
            <h3 class="mb-4">
              Featured Repos
              (2)
            </h3>
            <b-row-stub tag="div" class="mb-3">
              <b-col-stub md="6" tag="div">
                <b-form-input-stub value="" autocomplete="off" placeholder="Filter by title or language" type="text"></b-form-input-stub>
              </b-col-stub>
            </b-row-stub>
            <b-row-stub tag="div">
              <b-col-stub lg="4" tag="div" class="mb-4">
                <repo-card-stub item="[object Object]"></repo-card-stub>
              </b-col-stub>
              <b-col-stub lg="4" tag="div" class="mb-4">
                <repo-card-stub item="[object Object]"></repo-card-stub>
              </b-col-stub>
            </b-row-stub>
          </b-col-stub>
        </b-row-stub>
      </b-container-stub>
    </b-col-stub>
  </b-row-stub>
</b-container-stub>
`;
